fix: header spacing in component

--- a/src/components/common/Header/styles.module.css
+++ b/src/components/common/Header/styles.module.css
@@ -1,14 +1,30 @@
 .container {
   height: var(--header-height);
-  padding: 0 var(--space-2);
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  position: relative;
-  z-index: 2;
+  justify-content: center;
   border-radius: 0 !important;
   background-color: var(--color-background-paper);
+  padding-right: 0;
+}
+
+.header > div {
+  padding: 0 var(--space-2);
+}
+
+.header > div:nth-child(-n + 2) {
+  padding: 0;
+}
+
+.header > div:nth-last-child(-n + 3) {
+  height: var(--header-height);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-left: 2px solid var(--color-border-light);
+}
+
+.header > div:last-child {
+  padding-right: 0;
 }
 
 .logo {
@@ -25,14 +41,6 @@
   display: none;
 }
 
-.tokenWidget {
-  height: 100%;
-}
-
-.chainSwitcher {
-  margin-right: var(--space-2);
-}
-
 @media (max-width: 768px) {
   .logo,
   .tokenWidget,
@@ -44,5 +52,17 @@
   .menuButton {
     display: block;
     flex: 1;
+  }
+
+  .header > div {
+    padding: 0 var(--space-1);
+  }
+
+  .header > div:nth-child(-n + 2) {
+    padding: 0;
+  }
+
+  .header > div:last-child {
+    padding-right: 0;
   }
 }
